--- a/client/src/componentes/About/About.module.css
+++ b/client/src/componentes/About/About.module.css
@@ -1,13 +1,235 @@
+.Div{
+    background-color: #edeff0;
+    height: 1400px;
+}
+  
+.imagenAbout{
+    border: 1px solid black;
+    min-width: 900px;
+    min-height: 900px;
+}
+ .divPadre{
+    display: flex;
+    flex-direction: row;
+    width: 100%;  
+}
+.card {
+    height: 350px;
+    width: 300px;
+    position: relative;
+    transition: all 0.4s cubic-bezier(0.645, 0.045, 0.355, 1);
+    border-radius: 1em;
+    box-shadow: 0 0 20px 8px #d0d0d0;
+    margin: 8px;
+   }
+   
+
+   .card_image2 {
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    transition: all 1s cubic-bezier(0.645, 0.045, 0.355, 1);
+    background: url('./alejandro.jpg');
+    background-size: cover;
+
+    /* background: linear-gradient(to top, #0a3394, #4286f4); */
+   }
+   .card_image4 {
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    transition: all 1s cubic-bezier(0.645, 0.045, 0.355, 1);
+    background: url('./joaco.jpg');
+    background-size: cover;
+
+    /* background: linear-gradient(to top, #0a3394, #4286f4); */
+   }
+   
+   .card_image6 {
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    transition: all 1s cubic-bezier(0.645, 0.045, 0.355, 1);
+    background: url('./beli.jpg');
+    background-size: cover;
+
+    /* background: linear-gradient(to top, #0a3394, #4286f4); */
+   }
+   .card_description {
+    /* width: 100%;
+    display: flex;
+    position: absolute;
+    top: 10px;
+    gap: 1em;
+    flex-direction: column;
+    background-color: white;
+    opacity: .7;
+    height: 70%;
+    bottom: 0;
+    border-radius: 1em 1em 0 0;
+    transition: all 1s cubic-bezier(0.645, 0.045, 0.355, 1);
+    padding: 1rem; */
+    display: none;
+   }
+   
+
+   .text_title {
+    font-size: 1.4em;
+    font-weight: 700;
+   }
+   
+   .text_body {
+    font-size: 1em;
+    line-height: 150%;
+     }
+   
+   
+
+   
+   .card:hover .card_description {
+    transform: translateY(40%);
+    width: 100%;
+    display: flex;
+    position: absolute;
+    top: 10px;
+    gap: 1em;
+    flex-direction: column;
+    background-color: white;
+    opacity: .8;
+    height: 70%;
+    bottom: 0;
+    border-radius: 1em 1em 0 0;
+    transition: all 1s cubic-bezier(0.645, 0.045, 0.355, 1);
+    padding: 1rem;
+   }
+    
+   
+   
 .contentAbout {
     background-color: #edeff0;
     height: 79vh;
     display: flex;
     flex-direction: column;
     align-items: center;
+    /* position: relative;
+    right: 8.7%; */
 }
 
 .contentAbout h1 {
     font-weight: bold;
-    font-size: 60px;
+    font-size: 70px;
     margin-bottom: 50px;
 }
+
+.divData{
+    width: 95%;
+    position: relative;
+    top: 160px;
+}
+
+.Footer{
+    /* width: 110%; */
+    position: relative;
+    top: 100px;
+}
+
+
+
+@media (max-width: 1300px)  {
+    .Div{
+        background-color: #edeff0;
+        height: 1940px;
+    }
+    .divPadre {
+        width: 95%;
+        transition: all 0.4s cubic-bezier(0.645, 0.045, 0.355, 1);
+        border-radius: 1em;
+        box-shadow: 0 0 20px 8px #d0d0d0;
+        margin: 8 8 8 8px;
+        text-align: center;
+        justify-content: center;
+        display: grid;
+        grid-template-columns: 200px 200px 200px;
+        grid-template-rows: 250px 250px 250px;
+        grid-gap: 90px;
+       
+      
+       }
+
+       .card {
+        height: 250px;
+        width: 250px;
+        position: relative;
+        top: 100px;
+        right: 27%;
+        transition: all 0.4s cubic-bezier(0.645, 0.045, 0.355, 1);
+        border-radius: 1em;
+        box-shadow: 0 0 20px 8px #d0d0d0;
+        margin: 40px;
+        
+       }
+ 
+  }
+
+  
+@media (max-width: 768px)  {
+    .Div{
+        background-color: #edeff0;
+        height: 1800px;
+    }
+    .divPadre {
+        width: 95%;
+        transition: all 0.4s cubic-bezier(0.645, 0.045, 0.355, 1);
+        border-radius: 1em;
+        box-shadow: 0 0 20px 8px #d0d0d0;
+        margin: 8px;
+        justify-content: center;
+        display: grid;
+        grid-template-columns: 200px 200px ;
+        grid-template-rows: 200px 200px;
+        grid-gap: 60px;
+        border: 1px solid black;
+       }
+
+       .card {
+        height: 200px;
+        width: 200px;
+        position: relative;
+        top: -10px;
+        right: 28%;
+        transition: all 0.4s cubic-bezier(0.645, 0.045, 0.355, 1);
+        border-radius: 1em;
+        box-shadow: 0 0 20px 8px #d0d0d0;
+        margin: 30px;
+        /* margin-left: 40px;
+        margin-right: 40px; */
+       }
+  }
+
+  @media (max-width: 530px)  {
+    .divPadre {
+        width: 95%;
+        transition: all 0.4s cubic-bezier(0.645, 0.045, 0.355, 1);
+        border-radius: 1em;
+        box-shadow: 0 0 20px 8px #d0d0d0;
+        margin: 8px;
+        justify-content: center;
+        display: grid;
+        grid-template-columns: 200px 200px ;
+        grid-template-rows: auto;
+        grid-gap: 20px;
+       }
+
+       .card {
+        height: 150px;
+        width: 150px;
+        position: relative;
+        right: 10%;
+        transition: all 0.4s cubic-bezier(0.645, 0.045, 0.355, 1);
+        border-radius: 1em;
+        box-shadow: 0 0 20px 8px #d0d0d0;
+        margin: 40px;
+        margin-left: 40px;
+        margin-right: 40px;
+       }
+  }
