--- a/client/src/componentes/home/home.module.css
+++ b/client/src/componentes/home/home.module.css
@@ -4,17 +4,23 @@
 .hero {
   width: 100%;
   height: 85vh;
-  background-image: linear-gradient(
+  /* background-image: linear-gradient(
       0deg,
       rgba(0, 0, 0, 0.3),
       rgba(0, 0, 0, 0.3)
     ),
-    url('../../img/stadium.jpg');
+    url('./foto.jpg');  */
   background-position: bottom;
   background-size: cover;
   position: relative;
   display: flex;
   align-items: center;
+}
+.imgH{
+height: 100%;
+width: 100%;
+border: 3px solid black;
+z-index: 100;
 }
 
 .section {
